//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Account {
  id String [pk]
  userId String [not null]
  providerType String [not null]
  providerId String [not null]
  providerAccountId String [not null]
  refreshToken String
  accessToken String
  accessTokenExpires DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]

  indexes {
    (providerId, providerAccountId) [unique]
  }
}

Table Session {
  id String [pk]
  userId String [not null]
  expires DateTime [not null]
  sessionToken String [unique, not null]
  accessToken String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
}

Table User {
  id String [pk]
  name String
  email String [unique]
  emailVerified DateTime
  image String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  interestedTags Tag [not null]
  accounts Account [not null]
  sessions Session [not null]
  posts Post [not null]
  roles Roles [not null]
}

Table VerificationRequest {
  id String [pk]
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Table Post {
  id String [pk]
  tweetId String [unique, not null]
  author User [not null]
  authorId String [not null]
  tags Tag [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Tag {
  id String [pk]
  name String [not null]
  posts Post [not null]
  interestedUsers User [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Roles {
  id String [pk]
  name String [not null]
  discordId String [unique, not null]
  users User [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table TagToUser {
  interestedtagsId String [ref: > Tag.id]
  interestedusersId String [ref: > User.id]
}

Table RolesToUser {
  rolesId String [ref: > Roles.id]
  usersId String [ref: > User.id]
}

Table PostToTag {
  tagsId String [ref: > Tag.id]
  postsId String [ref: > Post.id]
}

Ref: Account.userId > User.id

Ref: Session.userId > User.id

Ref: Post.authorId > User.id